# GRASSHOPPER-Manual_Control_and_Odometry_Estimation

./: CMakeLists.txt  README.md
local_controller/local_controller/: sequence1_mod.py  state_controller.py
robot_assembly/: package.xml
robot_assembly/config/: joint_names_robot_assembly.yaml  robot_2wd_rviz.rviz
robot_assembly/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_assembly/launch/: 4wd.launch.xml  gazebo.launch  python.launch.py  tf.launch.xml
robot_assembly/urdf/: robot_2wd.urdf.xacro  robot_4wd.urdf.xacro  robot_assembly.csv  robot_assembly.urdf.xacro
robot_localization/: package.xml
robot_localization/launch/: dual_ekf_navsat_example.launch.py  ekf.launch.py  navsat_transform.launch.py
robot_localization/params/: dual_ekf_navsat_example.yaml  ekf.yaml
ros2_laser_scan_matcher/: CMakeLists.txt
ros2_laser_scan_matcher/launch/: lidar_based_odometry.launch.py
ros2_odometry_estimation/: CMakeLists.txt  package.xml
ros2_odometry_estimation/include/node/: odometry_estimation_node.h
ros2_odometry_estimation/include/vehicle_models/: vehicle_models.h
ros2_odometry_estimation/launch/: odometry_estimation.launch.py  radian_to_rpm.launch.py  robot_odometry_filtered.launch.py
ros2_odometry_estimation/src/node/: odometry_estimation_node.cpp  radian_to_rpm.cpp
ros2_odometry_estimation/src/vehicle_models/: vehicle_models.cpp
ros2_vesc_drv/: setup.py
ros2_vesc_drv/launch/: joy_teleop.launch.py  vesc_cmd_vel.launch.py  vesc_with_joy.launch.py
ros2_vesc_drv/ros2_vesc_drv/: cmd_vel.py  cmdv_mapper.py  joystic_control_new.py  joystick_control.py  vesc.py
sick_tim/cfg/: sick_usb.yaml
vesc-ros2/vesc_ackermann/: CMakeLists.txt
vesc-ros2/vesc_driver/: package.xml
vesc-ros2/vesc_driver/launch/: vesc_driver_node.launch.py
vesc-ros2/vesc_driver/params/: vesc_config_imu.yaml  vesc_config_left_front.yaml  vesc_config_left_rear.yaml  vesc_config_right_front.yaml  vesc_config_right_rear.yaml
vesc-ros2/vesc_msgs/: CMakeLists.txt
(+19 files in other folders)
